fixed alignment for review questions

--- a/client/src/components/question-page.css
+++ b/client/src/components/question-page.css
@@ -5,20 +5,23 @@
 
 .question-box {
   display: flex;
-  justify-content: space-between;
-  border: 2px solid #2F6B3A;
+  flex-direction: column;
+  align-items: center;
+  /*border: 2px solid #2F6B3A;*/
   width: 60%;
   margin: auto;
   margin-top: 50px;
   padding: 50px;
-  background: #EDE6E3;
-  box-shadow: 1px 1px 1px #785731;
+  color: #301C00;
+  /*background: #EDE6E3;*/
+  /*box-shadow: 1px 1px 1px #785731;*/
 }
 
 .question {
   font-family: 'Montserrat', sans-serif;
-  font-size: 20px;
+  font-size: 24px;
   margin-top: 30px;
+  font-weight: bold;
 }
 
 .answer-section {
@@ -30,15 +33,18 @@
 }
 
 .answer-section > input {
-  padding: 10px;
+  background: #EDE6E3;
+  padding: 20px;
   margin: 10px 10px;
   width: 90%;
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
+  border: none;
 }
 
 .answer-section input::placeholder {
-  font-size: 14px;
+  font-size: 16px;
+  color: #301C00;
 }
 
 .submit-answer {
@@ -48,7 +54,7 @@
   color: #ffffff;
   font-size: 16px;
   border: none;
-  box-shadow: 2px 2px 2px #DADAD9;
+  box-shadow: 2px 2px 2px #785731;
   margin-top: 15px;
 }
 
@@ -88,6 +94,7 @@
   font-family: 'Montserrat', sans-serif;
   color: #301C00;
   font-size: 20px;
+  font-weight: bold;
   margin-top: 25px;
 }
 
